# content-repurposing-engine

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  GEMINI.md  IMPLEMENTATION_PLAN.md  PIPELINE.md  README.md  biome.json  content-engine.db  dev.sh  docker-compose.yml  package.json  test-elysia-macro.ts
.github/: GITHUB_ACTIONS_SETUP.md
.github/workflows/: ci.yml  deploy.yml  drift-detection.yml
client/: .dockerignore  Dockerfile  package.json  vite.config.ts
client/src/: App.tsx  index.css  main.tsx
client/src/contexts/: AuthContext.tsx
client/src/hooks/: useJobStatus.ts
client/src/lib/: api.ts
client/src/pages/: DashboardPage.tsx  DownloaderPage.tsx  LoginPage.tsx  PricingPage.tsx  ProjectPage.tsx  ProjectsPage.tsx  RegisterPage.tsx  SettingsPage.tsx  UploadPage.tsx
client/src/types/: auth.ts  download.ts  video.ts
infra/: .gitignore  README.md  bootstrap.sh  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/modules/cdn/: main.tf  (+2 more)
server/: .dockerignore  Dockerfile  curl_out.txt  drizzle.config.ts  package.json  test-elysia-derive.ts  test-elysia-macro.ts  test-elysia-resolve.ts  test-jwt.ts  test-sse.ts  test.sh  update-sse.ts
server/src/: index.ts
workers/: .dockerignore  Dockerfile  check-redis.py  output.txt  output2.txt  output3.txt  pyproject.toml  ruff.toml  test-bullmq.py
workers/src/: config.py  logger.py  main.py
workers/src/models/: clip.py  download_job.py  job.py  segment.py
workers/src/pipeline/: analyze.py  caption.py  clip.py  download_handler.py  reframe.py  transcribe.py
workers/src/pipeline/utils/: transcript_parser.py
workers/src/queue/: connection.py  consumer.py
workers/src/services/: ffmpeg_service.py  llm_service.py  storage_service.py  whisper_service.py  youtube_service.py
workers/src/utils/: api.py
workers/tests/: test_analysis_manual.py  test_caption_manual.py  test_clip_manual.py  test_reframe_manual.py
(+59 files in other folders)
