[project]
name = "workers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bullmq>=1.2.0",
    "fastapi>=0.135.1",
    "groq>=0.25.0",
    "ffmpeg-python>=0.2.0",
    "google-genai>=1.68.0",
    "httpx>=0.28.1",
    "openai>=2.28.0",
    "openai-whisper>=20250625",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "redis>=7.2.1",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "uvicorn>=0.41.0",
    "yt-dlp>=2026.3.13",
]

[tool.uv.extra-build-dependencies]
bullmq = ["redis", "semver", "msgpack"]
